--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
   <!--PRODUCTS GRID-->
    
    <div id="Container" class="container-fluid">
-  <div class="mix category-2" data-myorder="1"><a href="product.html"><img src="img/products/7095306-1-navy.jpg" alt="" class="img-responsive"></a></div>
-  <div class="mix category-2" data-myorder="2"><img src="img/products/7032891-1-black.jpg" alt=""></div>
-  <div class="mix category-1" data-myorder="3"><img src="img/products/fashion-men-s-individuality-black-and-white-157675.jpeg" alt=""></div>
+  <div class="mix category-2" data-myorder="1"><a href="product.html"><img src="img/products/7095306-1-navy.JPG" alt="" class="img-responsive"></a></div>
+  <div class="mix category-2" data-myorder="2"><img src="img/products/7032891-1-black.JPG" alt=""></div>
+  <div class="mix category-1" data-myorder="3"><img src="img/products/fashion-men-s-individuality-black-and-white-157675.JPEG" alt=""></div>
   <div class="mix category-2" data-myorder="4"><img src="img/products/6902498-1-blacksatin.jpg" alt=""></div>
   <div class="mix category-1" data-myorder="5"><img src="img/products/pexels-photo-175696.jpeg" alt=""></div>
   <div class="mix category-2" data-myorder="6"><img src="img/products/cloth1.jpeg" alt=""></div>
