--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <div class="mix category-1" data-myorder="11"><img src="img/products/7.jpg" alt=""></div>
   <div class="mix category-2" data-myorder="12"><img src="img/products/6467543-1-black.jpg" alt=""></div>
    
-    
+	</div>
    
     
 </div>  
